Fix text overflow issue
Overflow : auto resulted in before / after psuedo elements not being
shown outside of the original element.

To fix I had to create a child div for the content (with overflow)
and attach the pseudo elements to parent div (without overflow)

--- a/styles.css
+++ b/styles.css
@@ -30,11 +30,15 @@ body {
   grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
   gap: 10px;
   border: solid black 1px;
-  padding: 2rem;
+  padding: 4rem;
   background-color: #ca8b0433;
 
   min-height: 12rem;
   z-index: 1;
+}
+
+.content-holder {
+  overflow-x: scroll;
 }
 
 .book-card {
@@ -81,7 +85,7 @@ body {
   position: absolute;
   height: 20px;
   left: -11.5px;
-  top: -23px;
+  top: -22px;
   background-color: color-mix(in srgb, var(--color), black 20%);
   z-index: -1;
   transform: skewX(45deg);
@@ -92,12 +96,6 @@ body {
   width: 20px;
   height: 20px;
   justify-self: right;
-}
-
-.book-card p {
-  font-size: 1rem;
-  height: 2px;
-  margin: 0px;
 }
 
 button {
